--- a/styels/header.css
+++ b/styels/header.css
@@ -11,6 +11,7 @@ header{
     justify-content: center;
     display: flex;
     margin: auto;
+    background: rgba(229, 84, 115, 0.10);
 
 }
 .header-contain{
@@ -49,3 +50,53 @@ header{
     width: 635px;
     height: 800px;
 }
+
+
+
+/* our futureed flower stylesheet */
+
+.our-featured-fl{
+    align-items: center;
+    
+}
+.our-featured-fl h3{
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+}
+.our-featured-p{
+    width: 100%;
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+
+.card-container {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    width: 80%;
+  }
+  .card {
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+  }
+  .card img {
+    width: 310px;
+    height: 428px;
+    
+  }
+  .card-p{
+    color: #272727;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 35px; 
+    text-decoration-line: underline;
+  }
