--- a/styels/header.css
+++ b/styels/header.css
@@ -132,3 +132,87 @@ header{
 .oof_description_3 {
     padding: 0px 109px 0px 0px;
 }
+
+
+/* services part stylesheet */
+.Service {
+    background: #2727270d;
+    height: 250px;
+    width: 1235px;
+    margin: 108px auto;
+}
+
+.service_container {
+    display: flex;
+    justify-content: space-around;
+    padding: 70px 0px 0px 48px;
+}
+
+
+.img_service_container_2 {
+    padding: 0px 0px 0px 142px;
+}
+
+
+.img_service_container_3 {
+    padding: 0px 0px 0px 12px;
+}
+
+.service_details {
+    display: flex;
+    justify-content: space-around;
+}
+
+.service_details_1 {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 12px 0px 0px 0px;
+}
+
+.service_details_2 {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 12px 0px 0px 0px;
+}
+
+.service_details_3 {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 12px 0px 0px 0px;
+}
+
+/* part stylesheeet  */
+.discount {
+    display: flex;
+    justify-content: space-around;
+    background: #e554730d;
+    padding: 83px 237px 83px 181px;
+}
+
+.discount_title_container {}
+
+.discount_title {
+    color: #272727;
+    font-size: 36px;
+    margin: 109px 0px 23px 11px;
+    font-weight: 800;
+}
+
+.discrount_description {
+    color: #27272799;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 0px 63px 0px -16px;
+}
+
+#discount_btn {
+    margin: 23px 0px 0px 202px;
+}
