--- a/styels/header.css
+++ b/styels/header.css
@@ -271,3 +271,37 @@ header{
     height: 330px;
 }
 /* Instagram part end  */
+
+/* Deals style part start  */
+.deals-container {
+    margin-top: 500px;
+    border-radius: 8px;
+    background-image: url('/Flower Asset/Rectangle\ 9.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.deals1 {
+    padding: 50px;
+}
+
+.sub {
+    text-align: center;
+}
+
+.texthol {
+    padding: 20px;
+    border: none;
+    border-radius: 8px;
+    background: #FFF;
+    width: 400px;
+    margin-left: 0px;
+}
+#btn33{
+    margin-left: 10px;
+}
+/* Deals style part end */
